package com.gupao.study.interfaces;

/**
 * 项目类接口
 * @author rainly
 */
public interface Project {
    /**
     * 项目产出
     */
    void output();
}
