package com.gupao.study.methodfactory;

import com.gupao.study.interfaces.Project;

/**
 * 项目方法接口
 * @author rainly
 */
public interface ProjectFactory {
    /**
     * 建立项目
     */
    Project createProject();
}
